--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">JuicyFruit</string>
+    <string name="desc_card_image">Card Image</string>
+    <string name="msg_welcome">Find your new buddy!</string>
 </resources>
